# forecasto

./: .gitignore  ClaudeCode_Sessioni_Report.xlsx  FINAL_REFACTORING_SUMMARY.md  ForecastoServerAPI.md  ForecastoServerImplementation-Prompt.md  ForecastoUIImplementation-Prompt.md  GDPR-compliance-prompt.md  RECAP_2026-02-15.md  REFACTORING_COMPLETED.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SESSIONS_REFACTORING_COMPLETED.md  demo_workspace_records.json  dev.sh  forecasto-manuale-utente.md  forecasto-manuale.py  start-all.sh  start-client.sh  start-server.sh  test_records_refactoring.py  test_refactoring.py  test_refactoring_simple.py  test_sessions_refactoring.py
.claude/: launch.json
forecasto-agent/: pyproject.toml
forecasto-agent/src/forecasto_agent/: __init__.py  cache.py  config.py  main.py  notifications.py  queue_manager.py  tray.py  watcher.py  workspace_setup.py
forecasto-server/: .env.example  README.md  alembic.ini  pyproject.toml
forecasto-server/alembic/: env.py
forecasto-server/alembic/versions/: 001_initial_schema.py  002_add_description_to_workspace.py  003_replace_project_id_with_project_code.py  004_add_granular_permissions.py  005_add_invite_code.py  006_add_registration_codes.py  007_add_review_date.py  008_bank_accounts_global.py  009_workspace_bank_account_direct.py  010_add_partner_system.py  011_add_billing_system.py  012_add_vat_deduction.py  013_add_seq_num.py  014_add_oauth_tables.py  015_drop_projects_tables.py  016_add_recipient_to_codes.py  017_add_fts5.py  018_add_ac_synced_at.py  019_workspace_unique_per_owner.py  020_remove_fiscal_year.py  021_add_ui_preferences_to_users.py  021_merge_heads.py  022_add_vat_month.py  023_add_vat_registries.py  024_workspace_bank_accounts_m2m.py  025_add_bank_account_to_vat_registry.py  026_add_exclude_from_cashflow.py  027_add_deleted_at_to_users.py  028_add_withholding_rate.py  029_add_inbox_items.py  030_add_agent_tokens_and_inbox_document_type.py  (+15 more)
forecasto-server/scripts/: migrate_reference_cleanup.py
forecasto-server/tests/: __init__.py  conftest.py
(+423 files in other folders)
